--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,32 @@
-*
-{
+*{
     box-sizing: border-box;
     
 }
 body{
     margin:0px;
+    background-color: #1b2433;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.main-section
+{
+    background-color: #ffce7a;
+    height: 100%;
+    width: 35%;    
+}
+#primary-heading
+{
+    font-family:  "Kaushan Script", cursive;
+    font-size: 35px;
+    text-align: center;
+}
+#primary-tag
+{
+    font-family: "Raleway", sans-serif;
+    font-weight: bold;
+    font-size: medium;
+    text-align: center;
+    line-height: 0%;
+}
